--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value="Doe"><br><br>
   <input type="submit" value="Submit">
-</form> 
+</form>
+<br>
+<img src="https://images.pexels.com/photos/257360/pexels-photo-257360.jpeg?cs=srgb&dl=pexels-pixabay-257360.jpg&fm=jpg" class="img-fluid" alt="..."> 
 
 <p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
